# visionx-rpi-capture

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  config.py  configuration.toml  docker-compose.yml  imageCapture.py  logging.py  metrics.py  pyproject.toml  requirements.txt  tasks.py
scripts/: calibrate.sh  dev.sh  setup.sh  start.sh
scripts/lib/: utils.sh
scripts/modules/: camera.sh
