[project]
name = "visionx-rpi-capture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gunicorn>=25.0.3",
    "pillow>=12.1.0",
    "structlog>=25.5.0",
    "python-dotenv>=1.1.0",
]
